--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -15,5 +15,14 @@
     <P>Hello guys; Am Godsway from Ghana Accra, am an accountant by profession but have a strong desire for software engineering. I love listening to music from hiphop to RnB, also I like watching football matches and playing football video games.</P>
     <p>I served a full time mission in the year 2014 and returned in 2016 to pursue a college degree in finance and accounting. I graduated in 2020 and desire to pursue another degree in applied technology at BYU IDAHO. Am single and live alone.</p>
 </body> 
-</html>
+</html> 
+<h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>  
+<p>Your Name Here - WDD130</p>
 
