--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting vacations | Dry Oar Boating | Home.</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body> 
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -42,10 +44,11 @@
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
+            <img class="boat" src="images/rapids.jpg" alt="rafting boat">
+            <img class="oars" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div> 
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -69,6 +72,6 @@
             </a>
         </div>
     </footer>
-    
+ </div>
 </body>
 </html>
