add html and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting vacations | Dry Oar Boating | Home.</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css"/>
 </head>
 <body> 
     <div id="content">
@@ -34,12 +34,12 @@
     </div> 
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="card" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon"> 
-            <h2>Camping</h2>
+            <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="card" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
