--- a/aboutme/byu.html
+++ b/aboutme/byu.html
@@ -19,6 +19,12 @@
       <h1>Brigham Young University Idaho</h1>
       <img src="https://byui.edu/images/service-sites/map-banner.jpg" />
       <p> class= 'main-para'>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty and employees share a commitment to live the gospel.</p> 
+      <div class="grid">
+        <div class="one">Box 1</div>
+        <div class="two">Box 2</div>
+        <div class="three">Box 3</div>
+        <div class="four">Box 4</div>
+      </div>
     </main>
     <footer>
       <p>My First Web Page 20XX &copy</p> 
