--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[To provide exceptional financial and professional services while maintaining the highest levels of integrity and professionalism.]</p>
+    <p>[We strive to enrich people's lives by providing outstanding adventure experiences.]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Provide audit&assurance, risk advisory,consulting and tax&legal services for executies,directors and others who are active in governance.]</p>
+    <p>[White water rafting is a fun, fast and unforgettable activity plus you don’t need any prior experience. We have a friendly, highly-trained team here to help you get to grips with the basics before heading out. Plus we provide you with all the equipment you need to have fun and stay safe on the rapids.]</p>
     <!-- change this -->
 
     <hr />
