--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="#">"auditfirm/site-plan.html"</a>
+  <a href="auditfirm/site-plan.html">Personal siteplan</a>
 </nav>
 
 </body> 
