--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
+      <h1>[SwayTrust] Site Plan</h1>
       <h2>Godsway Awuah</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -25,7 +25,8 @@
 
 
       <h3>Audience</h3>
-      <p>[Sway Trust is focusing on small and medium businesses with their Bookkeeping and other services related to operative financial management.]</p>  <!-- change this -->
+      <p>[Sway Trust is focusing on small and medium businesses with their Bookkeeping and other services related to operative financial management.
+        We work closely with our clients, helping them to mitigate risks and grasp opportunties.]</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
