--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -25,8 +25,15 @@
 
 
       <h3>Audience</h3>
-      <p>[Sway Trust is focusing on small and medium businesses with their Bookkeeping and other services related to operative financial management.
-        We work closely with our clients, helping them to mitigate risks and grasp opportunties.]</p>  <!-- change this -->
+      <p>[SWAY TRUST is an accounting firm dedicated to providing superior, personalized tax and accounting services. 
+        We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. 
+        Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals.
+        We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established, small or mid-sized, 
+        you’ll always receive the personal support and exceptional service our Ghanaian, ICA ACCA has come to be known for by local business owners.
+        In addition to our wide range of business accounting and tax services, we also provide tax preparation services for individuals. 
+        When you trust us to prepare your taxes, you'll have the comfort of knowing that they've been calculated accurately and you'll get your tax refund back quickly.
+        Let us work for you! Contact us for a free consultation now. 
+        ]</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -126,29 +133,68 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [ Let us worry about the numbers.
+        Trust The Accounting to us. 
+        Save Real Money on Taxes. 
+        SWAY TRUST is an accounting firm dedicated to providing superior, 
+        personalized tax and accounting services. 
+        We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals. 
+        We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established, small or mid-sized, you’ll always receive the personal support and exceptional service our Ghanaian, ICA ACCA has come to be known for by local business owners. 
+        In addition to our wide range of business accounting and tax services, we also provide tax preparation services for individuals. 
+        When you trust us to prepare your taxes, you'll have the comfort of knowing that they've been calculated accurately and you'll get your tax refund back quickly. 
+        Let us work for you! Contact us for a free consultation now. ]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/pexels-rodnae-productions-7821702 A.jpg" alt="image for homepage">
+        <img src="images/pexels-kampus-production-8441811A.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Services]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [At Sway Trust, we offer optimal financial solutions to meet the accounting and bookkeeping needs of all kinds of small businesses. We’ll keep your finances organized and up to date while you focus your efforts on core business issues. And we’ll deliver regular, meaningful, financial reports to make sure you always have a clear financial snapshot of your business.
+        Give us a call at 026-054-6022 to discuss a package of accounting services for your business. We offer a free initial consultation.
+        Accounting and Bookkeeping
+        We supply a variety of accounting and bookkeeping services for small businesses, including financial statements, budgeting, and cash flow maintenance.
+        Incorporation and New Business Advisory
+        We provide business incorporation services and will direct you to the entity with the most tax advantages. We can also show you how write a business plan to obtain financing.
+        QuickBooks™ Setup and Support Services
+        From identifying the best version of QuickBooks for your business to mapping accounts, creating reports, and cleaning up your data file, we provide comprehensive QuickBooks support.
+        Xero Consulting Services
+        As a Xero Gold Partner, our CPA firm is qualified to assist you with the installation and set-up of your Xero accounting software.
+        Estate and Trust Planning
+        Work with us to develop a customized estate plan that reflects your personal goals, time frame, and financial situation. With our assistance and guidance, you'll face your financial future with confidence.
+        Financial Services
+        Preserve your assets for the next generation by working with us to create a personalized financial plan. We offer retirement, estate, and college savings planning.
+        Outsourced Accounting and Bookkeeping
+        Growing businesses that are struggling to keep up with their books should take advantage of our affordable outsourced accounting and bookkeeping services.
+        Payroll Services
+        Our payroll services are guaranteed to simplify the payroll process and save you precious time. We’ll handle all your payroll tax filings and will deliver customized reports.
+        ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/pexels-pavel-danilyuk-7654584 A.jpg" alt="image for page">
+        <img src="images/pexels-tima-miroshnichenko-6694542A.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Established in 2020, Sway Trust is an accounting firm providing comprehensive accounting and tax services to businesses throughout Ghana. 
+        We are a well-respected firm with a reputation for expertise and integrity.
+        We understand that businesses need a competent and reliable financial advocate. 
+        Yes, we can prepare your taxes and process accurate financial statements, 
+        but our real strength lies in our ability to stand with you as you grow your business. 
+        We will be a trusted partner as you make the difficult decisions necessary for your success.
+        Sway Trust dedication to excellence speaks for itself. 
+        We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. 
+        Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals. 
+        Give us a call at 026-054-6022 to schedule a free 1/2 hour no obligation consultation
+        Godsway Awuah graduated from the University of Professional Study in 2015 with a Bachelor's degree in accounting and immediately entered the accounting team at KPMG Ghana. 
+        He then obtained an M.B.A. in finance from University of Ghana and continued to practice accounting and taxation. After five years of private industry experience, he started his own firm in 2020. 
+        ]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/IMG_9468_1A.jpg" alt="image for page3">
+        <img src="images/20220512_075715 A.jpg" alt="image for page3">
 
       </ul>
       <hr>
