--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="auditfirm/site-plan.html">Personal siteplan</a>
+  <a href="wwr/rivers.html">Rivers Page</a>
 </nav>
 
 </body> 
