--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="#">Personal Website</a>
   <a href="auditfirm/site-plan.html">Personal siteplan</a>
   <a href="wwr/rivers.html">Rivers Page</a>
+  <a href="wwr/contactus.html">contactus Page</a>
 </nav>
 
 </body> 
