--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -172,7 +172,7 @@
         ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/pexels-pavel-danilyuk-7654584 AB.jpg.jpg" alt="image for page">
+        <img src="images/pexels-pavel-danilyuk-7654584 AB.jpg.jpg.jpg" alt="image for page">
         <img src="images/pexels-tima-miroshnichenko-6694542AB.jpg" alt="image for page">
 
       </ul>
@@ -194,7 +194,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="images/IMG_9468_1AB.jpg" alt="image for page3">
-        <img src="images/20220512_075715 AB.jpg.jpg" alt="image for page3">
+        <img src="images/20220512_075715 AB.jpg.jpg.jpg" alt="image for page3">
 
       </ul>
       <hr>
