--- a/auditfirm/index.html
+++ b/auditfirm/index.html
@@ -4,62 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting vacations | Dry Oar Boating | Home.</title>
-    <link rel="stylesheet" href="styles/style.css"/>
+    <title>Sway Trust.</title>
+    <link rel="stylesheet" href="styles/tyle.css"/>
 </head>
 <body> 
     <div id="content">
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/Sway Trust-logosB.jpeg" alt="Quality Meets Trust">
         </a> 
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="services.html">Services</a>
+            <a href="about.html">About Us</a>
         </nav>
     </header> 
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+    <div id="home">
+        <div id="home-box">
+            <img id="home-img" src="images/pexels-kampus-production-8441811AB.jpg" alt="Sway Trust">
         </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar</h4>
-            <div class="button-box">
-                <a class="book" href="rates.html">Book Now</a>
-            </div>
+        <section id="home-msg">
+            <h1 class="home-title">Let Us Worry About the Numbers</h1>
+            <h4>Save Real Numbers on Taxes</h4>
         </section>
     </div> 
     <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon"> 
-            <h2>Rivers</h2>
+        <section class="home-card"> 
+            <p>SWAY TRUST is an accounting firm dedicated to providing superior, 
+                personalized tax and accounting services. 
+                We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals. 
+                We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established, small or mid-sized, you’ll always receive the personal support and exceptional service our Ghanaian, ICA ACCA has come to be known for by local business owners. 
+                In addition to our wide range of business accounting and tax services, we also provide tax preparation services for individuals. 
+                When you trust us to prepare your taxes, you'll have the comfort of knowing that they've been calculated accurately and you'll get your tax refund back quickly. 
+                Let us work for you! Contact us for a free consultation now. </p>
+            <img class="card" src="images/pexels-pavel-danilyuk-7654584 AB.jpg" alt="">
+            <h2>Accounting and Bookkeeping</h2>
         </section>
         <section class="camping-card">
-            <img class="card" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
+            <img class="card" src="images/pexels-rodnae-productions-7821702 AB.jpg" alt="">
+            <h2>Incorporation and New Business Advisory</h2>
         </section>
         <section class="rapids-card">
-            <img class="boat" src="images/rapids.jpg" alt="rafting boat">
-            <img class="oars" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <div id="background"></div> 
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great ourdoors.</p>
-            <a class='join' href="rivers.html">Join Us</a>
+            <img class="card" src="images/pexels-nataliya-vaitkevich-8927687AB.jpg" alt="">
+            <h2>QuickBooks™ Setup and Support Services</h2>
         </section>
     </main> 
     <footer>
-        <h3>Dry Oar &copy; 2022 - Godsway Awuah</h3>
-        <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-        <h3><a href="contactus.html">Contact Us</a></h3>
+        <h3>Copyright©2022 -Sway Trust</h3>
+        <h3><a href="#">Services</a></h3>
+        <h3><a href="#">About Us</a></h3>
         <div class="social">
             <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="fb icon">
