--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -172,8 +172,8 @@
         ]
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/pexels-pavel-danilyuk-7654584 AB.jpg.jpg.jpg" alt="image for page">
-        <img src="images/pexels-tima-miroshnichenko-6694542AB.jpg" alt="image for page">
+        <img src="images/pexels-pavel-danilyuk-7654584 AB.jpg" alt="image for page">
+        <img src="images/pexels-nataliya-vaitkevich-8927687AB.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -194,7 +194,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="images/IMG_9468_1AB.jpg" alt="image for page3">
-        <img src="images/20220512_075715 AB.jpg.jpg.jpg" alt="image for page3">
+        <img src="images/pexels-ivan-bertolazzi-2681319AB.jpg" alt="image for page3">
 
       </ul>
       <hr>
