updates personal site

--- a/auditfirm/about.html
+++ b/auditfirm/about.html
@@ -16,19 +16,19 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
+            <a href="site-plan.html">Site Plan</a>
             <a href="about.html">About Us</a>
         </nav>
     </header> 
     <div id="about">
-        <div id="about-box">
-            <img id="about-img" src="images/pexels-ivan-bertolazzi-2681319AB.jpg" alt="About Us">
+        <div id="about-box"> 
+            <h5 class="home-title">About Us</h5>
         </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Services</h1>
+        <section id="about-msg">
             
         </section>
     </div> 
-    <main class="home-grid"> 
+    <main class="about-grid"> 
         <p>[Established in 2020, Sway Trust is an accounting firm providing comprehensive accounting and tax services to businesses throughout Ghana. 
             We are a well-respected firm with a reputation for expertise and integrity.
             We understand that businesses need a competent and reliable financial advocate. 
@@ -45,6 +45,7 @@
     </main> 
     <footer>
         <h3>Copyright©2022 -Sway Trust</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
         <h3><a href="services.html">Services</a></h3>
         <h3><a href="about.html">About Us</a></h3>
         <div class="social">
