--- a/auditfirm/services.html
+++ b/auditfirm/services.html
@@ -16,6 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
+            <a href="site-plan.html">Site Plan</a>
             <a href="about.html">About Us</a>
         </nav>
     </header> 
@@ -23,9 +24,11 @@
         <div id="service-box">
             <img id="service-img" src="images/pexels-tima-miroshnichenko-6694964AB.jpg" alt="Servies">
         </div>
-        
+        <section id="service-msg">
+            <h1 class="home-title">SERVICES</h1>
+           </section>
     </div> 
-    <main class="home-grid">
+    <main class="service-grid">
         <h2>Accounting and Bookkeeping</h2>
         <p>We supply a variety of accounting and bookkeeping services for small businesses, 
                 including financial statements, budgeting, and cash flow maintenance. 
@@ -53,6 +56,7 @@
     </main> 
     <footer>
         <h3>Copyright©2022 -Sway Trust</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
         <h3><a href="services.html">Services</a></h3>
         <h3><a href="about.html">About Us</a></h3>
         <div class="social">
