--- a/auditfirm/index.html
+++ b/auditfirm/index.html
@@ -16,6 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
+            <a href="site-plan.html">Site Plan</a>
             <a href="about.html">About Us</a>
         </nav>
     </header> 
@@ -25,18 +26,19 @@
         </div>
         <section id="home-msg">
             <h1 class="home-title">Let Us Worry About the Numbers</h1>
-            <h4>Save Real Numbers on Taxes</h4>
-        </section>
+            <h4>Save Real Numbers on Taxes</h4> 
+           </section>
     </div> 
+    <p>SWAY TRUST is an accounting firm dedicated to providing superior, 
+        personalized tax and accounting services. 
+        We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals. 
+        We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established, small or mid-sized, you’ll always receive the personal support and exceptional service our Ghanaian, ICA ACCA has come to be known for by local business owners. 
+        In addition to our wide range of business accounting and tax services, we also provide tax preparation services for individuals. 
+        When you trust us to prepare your taxes, you'll have the comfort of knowing that they've been calculated accurately and you'll get your tax refund back quickly. 
+        Let us work for you! Contact us for a free consultation now. </p>
+
     <main class="home-grid">
-        <section class="home-card"> 
-            <p>SWAY TRUST is an accounting firm dedicated to providing superior, 
-                personalized tax and accounting services. 
-                We have always exceeded expectations by tailoring our services to client needs and providing the highest level of personalized service. Our professionals keep abreast of the latest developments in their respective fields of expertise and use them to assist our clients in achieving their financial goals. 
-                We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established, small or mid-sized, you’ll always receive the personal support and exceptional service our Ghanaian, ICA ACCA has come to be known for by local business owners. 
-                In addition to our wide range of business accounting and tax services, we also provide tax preparation services for individuals. 
-                When you trust us to prepare your taxes, you'll have the comfort of knowing that they've been calculated accurately and you'll get your tax refund back quickly. 
-                Let us work for you! Contact us for a free consultation now. </p>
+        <section class="home-card">   
             <img class="card" src="images/pexels-pavel-danilyuk-7654584 AB.jpg" alt="">
             <h2>Accounting and Bookkeeping</h2>
         </section>
@@ -51,6 +53,7 @@
     </main> 
     <footer>
         <h3>Copyright©2022 -Sway Trust</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
         <h3><a href="#">Services</a></h3>
         <h3><a href="#">About Us</a></h3>
         <div class="social">
