--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <a href="auditfirm/about.html">About Us page</a>
   <a href="wwr/rivers.html">Rivers Page</a>
   <a href="wwr/contactus.html">contactus Page</a>
+  <a href="auditfirm/text.html">A Web Component</a> 
+
+  
 </nav>
 
 </body> 
