--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -59,7 +59,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[ #FFFFFF]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[ #fcfbfb]</td><td class="accent2">[#48CAE4]</td></tr>
+        <tr><td class="primary">[ #FFFFFF]</td><td class="secondary">[#023e8a]</td><td class="accent1">[ #fcfbfb]</td><td class="accent2">[#48CAE4]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -214,7 +214,7 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="Images/SERVICES.PNG" alt="Services  wireframe">
+      <img src="images/SERVICES.PNG" alt="Services  wireframe">
 
       <h3>[About Us]</h3>
       <p>         
