--- a/auditfirm/site-plan.html
+++ b/auditfirm/site-plan.html
@@ -214,7 +214,7 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="Images/SERVICES.PNG" alt="Services  wireframe">
+      <img src="images/SERVICES.PNG" alt="Services  wireframe">
 
       <h3>[About Us]</h3>
       <p>         
