--- a/scrimba/learnactivity/index.html
+++ b/scrimba/learnactivity/index.html
@@ -8,10 +8,26 @@
     <title>Learning Activity</title>
 </head>
 <body>
-    <div class="wrap-container">
-       <div class="item"> shoes</div>
-       <div class="item"> Hoodies</div>
-       <div class="item"> T Shirts</div>
-   </div>
+    <h1>Upgrade to Pro</h1>
+
+    <div class="pricing">
+        <div>
+            <h2>For individuals</h2>
+              <ul>
+                <li>1 gb</li>
+                <li>No support</li>
+              </ul>
+        <button>Buy now</button>
+        </div>
+        <div>
+            <h2>For enterprise</h2>
+        <ul>
+            <li>10 gb</li>
+            <li>Priority support</li>
+        </ul> 
+        <button>Contact us</button>
+        </div>
+        
+    </div>
 </body>
 </html>
